--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RestaBar</string>
+    <string name="facebook_app_id">764399630628237</string>
+    <string name="fb_login_protocol_scheme">fb764399630628237</string>
 </resources>
